--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 	        		<li><a href="mailto:mahmoud.kraiem@gmail.com">email</a></li>
             <li><a href="https://in.linkedin.com/in/mahmoudkraiem">linkedin</a></li>
         		<li><a href="https://github.com/breebchi">github.com/breebchi</a></li>
+				<li><a href="https://breebchi.github.io/blog/atom.xml">RSS feed</a></li>
 				</ul>
 			</footer>
 		</body>
