--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="stylesheet" type="text/css" href="/css/sticky-footer-navbar.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -19,18 +19,34 @@
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
+			<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Mahmoud Kraiem</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home</a></li>
+	<li><a href="/about">About</a></li>
+	     <li><a href="/cv">CV</a></li>
+	    <li><a href="/blog">Blog</a></li>
+    </ul>
+  </div>
+</nav>
 			<div class="container">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
 			<footer>
+				 <div class="container">
+     
 	    		<ul>
 	        		<li><a href="mailto:mahmoud.kraiem@gmail.com">email</a></li>
             <li><a href="https://in.linkedin.com/in/mahmoudkraiem">linkedin</a></li>
         		<li><a href="https://github.com/breebchi">github.com/breebchi</a></li>
 				<li><a href="https://breebchi.github.io/blog/atom.xml">RSS feed</a></li>
 				</ul>
+					  </div>
 			</footer>
 		</body>
 	</html>
