--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
+			<footer class="footer">
 				 <div class="container">
      
 	    		<ul>
