--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 	    		</ul>
 			</nav>
 			<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">Mahmoud Kraiem</a>
     </div>
@@ -38,12 +38,12 @@
 			
 			</div><!-- /.container -->
 			<footer class="footer">
-				 <div class="container">
+				 <div class="container text-muted">
      
 	    		<ul>
-	        		<li><a href="mailto:mahmoud.kraiem@gmail.com">email</a></li>
-            <li><a href="https://in.linkedin.com/in/mahmoudkraiem">linkedin</a></li>
-        		<li><a href="https://github.com/breebchi">github.com/breebchi</a></li>
+	        		<li><a href="mailto:mahmoud.kraiem@gmail.com">Email</a></li>
+            <li><a href="https://in.linkedin.com/in/mahmoudkraiem">Linkedin</a></li>
+        		<li><a href="https://github.com/breebchi">Github</a></li>
 				<li><a href="https://breebchi.github.io/blog/atom.xml">RSS feed</a></li>
 				</ul>
 					  </div>
