--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,16 +11,17 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		</head>
 		<body>
-			<nav>
+			<!--<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
-			</nav>
+			</nav>-->
 			<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
+	 
     <div class="navbar-header">
       <a class="navbar-brand" href="/">Mahmoud Kraiem</a>
     </div>
