--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
 	    		</ul>
 			</nav>-->
 			<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
+				
+  <div class="container">
 	 
     <div class="navbar-header">
       <a class="navbar-brand" href="/">Mahmoud Kraiem</a>
@@ -33,11 +34,15 @@
     </ul>
   </div>
 </nav>
-			<div class="container">
+			
+			<div class="jumbotron  vertical-center">
+				<div class="container">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
+				</div>
+			
 			<footer class="footer">
 				 <div class="container text-muted">
      
