--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -21,7 +21,7 @@
 
 
   <!-- CDN lib files -->
-  <link rel="stylesheet" href="/client/css/style.css" />
+
 
 
 
@@ -42,7 +42,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc5/angular-material.min.js"></script>
   
 
-  <script src="/client/js/app.js"></script>
+  <script src="/js/app.js"></script>
 
   
   <div ng-cloak class=" u-wideWrapper u-paddingHm u-paddingTl" ng-controller="MainController">
