--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -29,6 +29,7 @@
 </head>
   <title>MyTickets</title>
 <body >
+ <!--  <script src="js/angular.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-animate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap-tpls.min.js"></script>
@@ -37,7 +38,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   <script src="https://code.angularjs.org/1.4.8/angular-route.min.js"></script>
-  <script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+  <script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
 
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc5/angular-material.min.js"></script>
   
