--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp" >
+<html >
 
 <head>
 <title>{{ page.title }}</title>
@@ -41,11 +41,12 @@
 </head>
   <title>MyTickets</title>
 <body >
-
+<div ng-app="myApp" >
   <div ng-cloak class=" u-wideWrapper u-paddingHm u-paddingTl" ng-controller="MainController">
    
   </div>
-
+</div>
+  
 
 
 </body>
