--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -31,7 +31,7 @@
  <script src="https://rawgit.com/angular/bower-material/master/angular-material.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap-tpls.min.js"></script>
 
-  <script src="js/app.js"></script>
+  <script src="/js/app.js"></script>
 
 
 
