--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -41,7 +41,7 @@
 </head>
   <title>MyTickets</title>
 <body >
-<div ng-app="myApp" >
+<div  >
   <div ng-cloak class=" u-wideWrapper u-paddingHm u-paddingTl" ng-controller="MainController">
    
   </div>
