--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -43,7 +43,7 @@
 <body >
 <div  >
   <div ng-cloak class=" u-wideWrapper u-paddingHm u-paddingTl" ng-controller="MainController">
-   
+   {{ content }}
   </div>
 </div>
   
