--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -42,7 +42,7 @@
   <title>MyTickets</title>
 <body >
 <div  >
-  <div ng-cloak class=" u-wideWrapper u-paddingHm u-paddingTl" ng-controller="MainController">
+  <div ng-cloak class=" u-wideWrapper u-paddingHm u-paddingTl" ng-app="myApp" ng-controller="MainController">
    {{ content }}
   </div>
 </div>
