--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -41,7 +41,7 @@
 </head>
   <title>MyTickets</title>
 <body >
-<div  >
+<div ng-app="myApp" >
   <div class=" u-wideWrapper u-paddingHm u-paddingTl" ng-controller="MainController">
    {{ content }}
   </div>
