--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -15,7 +15,8 @@
   <!-- Styles -->
 
   <!-- CDN lib files -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
+  
 <link rel="stylesheet" href="https://rawgit.com/angular/bower-material/master/angular-material.min.css">
  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
    <!-- <script src="/js/angular.min.js"></script>-->
@@ -29,7 +30,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
  <script src="https://rawgit.com/angular/bower-material/master/angular-material.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap-tpls.min.js"></script>
+  <script src="https://raw.githubusercontent.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-tpls-2.1.2.min.js"></script>
 
   <script src="/js/app.js"></script>
 
