--- a/_layouts/angularjs.html
+++ b/_layouts/angularjs.html
@@ -25,7 +25,7 @@
    
    <!-- Angular Material requires Angular.js Libraries -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
-   <script src="https://code.angularjs.org/1.4.8/angular-route.min.js"></script>
+  <!--  <script src="https://code.angularjs.org/1.4.8/angular-route.min.js"></script>-->
   <script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-animate.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
