--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="/js/default.js"></script>
+			
 		</head>
 		<body>
 			<!--<nav>
@@ -19,7 +21,7 @@
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>-->
-			<nav class="navbar navbar-default navbar-fixed-top">
+			<nav class="navbar navbar-default navbar-fixed-top" role = "navigation">
 				
   <div class="container">
 	 
