--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,17 +23,25 @@
 			</nav>-->
 			<nav class="navbar navbar-default navbar-fixed-top" role = "navigation">
 				
-  <div class="container">
+        <div class="container-fluid">
 	 
     <div class="navbar-header">
+	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbarCollapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
       <a class="navbar-brand" href="/">Mahmoud Kraiem</a>
     </div>
-    <ul class="nav navbar-nav">
+		<div class="collapse navbar-collapse navbarCollapse">
+               <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
-	<li><a href="/about">About</a></li>
+	<li><a href="/about">About me</a></li>
 	     <li><a href="/cv">CV</a></li>
 	    <li><a href="/blog">Blog</a></li>
     </ul>
+            </div>
+    
   </div>
 </nav>
 			
