--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,20 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="/js/default.js"></script>
+	<script>
+			// Add your javascript here
+$(function() {
+  $("h1").animate({
+    "margin-left": "100px"
+  }, "slow");
+
+  $(".nav li").on("click", function() {
+    $(".nav li").removeClass("active");
+    $(this).addClass("active");
+  });
+  
+});
+			</script>
 			
 		</head>
 		<body>
