--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,20 +9,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script>
-			// Add your javascript here
-$(function() {
-  $("h1").animate({
-    "margin-left": "100px"
-  }, "slow");
+	  <script src="/js/default.js"></script>
 
-  $(".nav li").on("click", function() {
-    $(".nav li").removeClass("active");
-    $(this).addClass("active");
-  });
-  
-});
-			</script>
 			
 		</head>
 		<body>
@@ -35,7 +23,7 @@ $(function() {
 	    		</ul>
 			</nav>-->
 			<nav class="navbar navbar-default navbar-fixed-top" role = "navigation">
-				
+			<div class="navbar-inner">	
         <div class="container-fluid">
 	 
     <div class="navbar-header">
@@ -54,7 +42,7 @@ $(function() {
 	    <li><a href="/blog">Blog</a></li>
     </ul>
             </div>
-    
+    </div>
   </div>
 </nav>
 			
