--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,10 +36,10 @@
     </div>
 		<div class="collapse navbar-collapse navbarCollapse">
                <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-	<li><a href="/about">About me</a></li>
-	     <li><a href="/cv">CV</a></li>
-	    <li><a href="/blog">Blog</a></li>
+      <li class="active" id="navhome"><a href="/">Home</a></li>
+	<li id="navaboutme"><a href="/about">About me</a></li>
+	     <li id="navcv"><a href="/cv">CV</a></li>
+	    <li id="navblog"><a href="/blog">Blog</a></li>
     </ul>
             </div>
     </div>
