--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
     </div>
 		<div class="collapse navbar-collapse navbarCollapse">
                <ul class="nav navbar-nav">
-      <li class="active" id="navhome"><a href="/">Home</a></li>
+      <li id="navhome"><a href="/">Home</a></li>
 	<li id="navaboutme"><a href="/about">About me</a></li>
 	     <li id="navcv"><a href="/cv">CV</a></li>
 	    <li id="navblog"><a href="/blog">Blog</a></li>
