--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
 			</div><!-- /.container -->
 				</div>
 			
-			<footer class="footer">
+			<footer class="footer navbar-fixed-bottom">
 				 <div class="container text-muted">
      
 	    		<ul>
