--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,8 @@ ul.posts li {
 
 /* outer wrapper: set max-width & max-height; max-height greater than padding-bottom % will be ineffective and height will = padding-bottom % of max-width */
 #Iframe-Master-CC-and-Rs {
-  max-width: 512px;
+  /*max-width: 512px;*/
+   min-width: 420px;
   max-height: 100%; 
   overflow: hidden;
 }
