--- a/css/main.css
+++ b/css/main.css
@@ -95,9 +95,11 @@ ul.posts li {
 
 /* outer wrapper: set max-width & max-height; max-height greater than padding-bottom % will be ineffective and height will = padding-bottom % of max-width */
 #Iframe-Master-CC-and-Rs {
-  /*max-width: 512px;*/
-   min-width: 420px;
+  /*max-width: 512px;
+   min-width: 420px;*/
+    min-width: 90%;
   max-height: 100%; 
+    min-height: 90%; 
   overflow: hidden;
 }
 
