--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,7 @@ ul.posts li {
 #Iframe-Master-CC-and-Rs {
   /*max-width: 512px;
    min-width: 420px;*/
+    max-width: 100%;
     min-width: 90%;
   max-height: 100%; 
     min-height: 90%; 
