--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ ul.posts li {
 #Iframe-Master-CC-and-Rs {
   /*max-width: 512px;
    min-width: 420px;*/
-    min-width: 90%;
+    min-width:420px;
   max-height: 100%; 
    /* min-height: 90%; */
   overflow: hidden;
