--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ ul.posts li {
   /*max-width: 512px;
    min-width: 420px;*/
     min-width:420px;
+    min-height: 800px;
   max-height: 100%; 
    /* min-height: 90%; */
   overflow: hidden;
