--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     margin: 60px auto;
      height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -98,7 +99,6 @@ ul.posts li {
   /*max-width: 512px;
    min-width: 420px;*/
     min-width:420px;
-    min-height: 800px;
   max-height: 100%; 
    /* min-height: 90%; */
   overflow: hidden;
