--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="jumbotron vertical-center"  style=" background-color: ghostwhite;">
+	<div class="jumbotron vertical-center"  style=" background-color: whitesmoke;">
 		<div class="container">
 			{{ content }}
 		</div><!-- /.container -->
