--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,31 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
+<!--<h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="post">
   {{ content }}
-</div>
+</div>-->
+
+
+
+        <div class="row">
+            <div class="col-md-push-2 col-md-8">
+
+                <!-- the actual blog post: title/author/date/content -->
+                <h2><a href="">{{ page.title }}</a></h2>
+                
+                <hr>
+                <p><i class="fa fa-calendar"></i> Posted on {{ page.date | date_to_string }}</p>
+                <hr>
+                <div class="post">
+                  {{ content }}
+                </div>
+            </div>
+
+            
+        </div>
+
+
+        <hr>
