--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,10 @@
 		<div class="navbar-inner">
 			<div class="container-fluid" style="background-color: aliceblue;">
 				<div class="navbar-header">
-					<button class="navbar-toggle" data-target=".navbarCollapse" data-toggle="collapse" type="button"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="/">Mahmoud Kraiem</a>
+					<button class="navbar-toggle" data-target=".navbarCollapse" data-toggle="collapse" type="button"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" style="border-right: 1px solid lightgrey;" href="/">Mahmoud Kraiem</a>
 				</div>
 				<div class="collapse navbar-collapse navbarCollapse">
 					<ul class="nav navbar-nav">
-						<li id="navhome">
-							<a href="/">Home</a>
-						</li>
 						<li id="navaboutme">
 							<a href="/about">About me</a>
 						</li>
