--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ ul.posts li {
 
 div.full-page {
    width:100%;
-   
+   padding-top: 5%;
     
 }
 
@@ -107,7 +107,7 @@ div.full-page {
   /*max-width: 512px;
    min-width: 420px;*/
     min-width:420px;
-  max-height: 90%; 
+  max-height: 80%; 
    /* min-height: 90%; */
   overflow: hidden;
 }
