--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,8 @@ div.full-page {
 
 
 .jumbotron.vertical-center {
-  margin-bottom: 0; /* Remove the default bottom margin of .jumbotron */
+  margin-bottom: 7%; /* Remove the default bottom margin of .jumbotron */
+     margin-top: 7%;
 }
 
 .vertical-center {
@@ -107,7 +108,7 @@ div.full-page {
   /*max-width: 512px;
    min-width: 420px;*/
     min-width:420px;
-  max-height: 80%; 
+  max-height: 100%; 
    /* min-height: 90%; */
   overflow: hidden;
 }
@@ -127,7 +128,7 @@ div.full-page {
   top: 0;
   left: 0;
   width: 100%;
-  height: 80%;
+  height: 100%;
   
   margin: 0;
   padding: 0;
