--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@ body {
     margin: 60px auto;
      height: 100%;
     width: 100%;
+    padding-top : 60px;
+    padding-bottom : 60px;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
