--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ div.full-page {
   /*max-width: 512px;
    min-width: 420px;*/
     min-width:420px;
-  max-height: 100%; 
+  /*max-height: 100%; */
    /* min-height: 90%; */
   overflow: hidden;
     -webkit-padding-after: 60px;
