--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 	<link href="/css/main.css" rel="stylesheet" type="text/css">
 	<link href="/css/sticky-footer-navbar.css" rel="stylesheet" type="text/css">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link rel=”stylesheet” id=”font-awesome-css” href=”//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css” type=”text/css” media=”screen”>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
@@ -24,7 +25,7 @@
                     <li><a href="/blog">Blog</a></li>
                 </ul>
             </nav>-->
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" >
 		<div class="navbar-inner">
 			<div class="container-fluid" style="background-color: aliceblue;">
 				<div class="navbar-header">
@@ -67,5 +68,8 @@
 			</ul>
 		</div>
 	</footer>
+	<a href=”#” class=”back-to-top” style=”display: inline;”>
+ 	<i class=”fa fa-arrow-circle-up”></i>
+	</a>
 </body>
 </html>
