--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ div.full-page {
   /*max-height: 100%; */
    /* min-height: 90%; */
   overflow: hidden;
-    -webkit-padding-after: 60px;
+  /*  -webkit-padding-after: 60px;*/
 }
 
 /* inner wrapper: make responsive */
