--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,10 @@
 			</ul>
 		</div>
 	</footer>
-	
+	<a href=”#” class=”back-to-top” style=”display: inline;”>
+ 
+	<i class=”fa fa-arrow-circle-up”></i>
+ 
+	</a>
 </body>
 </html>
